--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohttp==3.8.4
+aiohttp==3.8.4
 aiosignal==1.3.1
 anyio==3.6.2
 async-timeout==4.0.2
@@ -21,7 +21,7 @@ doodstream==0.1.2
 esprima==4.0.1
 fastapi==0.95.1
 filelock==3.12.0
-Flask==2.2.4
+Flask==2.3.2
 Flask-Caching==2.0.2
 Flask-Cors==3.0.10
 flask-sock==0.6.0
@@ -47,7 +47,7 @@ pydantic==1.10.7
 pydotenv==0.0.7
 pyparsing==3.0.9
 pyreadline3==3.4.1
-python-dotenv== 0.21.1
+python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0
 rel==0.4.8
@@ -69,7 +69,7 @@ virtualenv-clone==0.5.7
 websocket==0.2.1
 websocket-client==1.5.1
 websockets==11.0.3
-Werkzeug==2.2.3
+Werkzeug==2.3.4
 wsproto==1.2.0
 yarl==1.9.2
 zope.event==4.6
